--- a/api/package.json
+++ b/api/package.json
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/wlabarron/roster#readme",
   "devDependencies": {
     "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "promise-mysql": "^5.0.1"
   }
 }
